[gd_scene format=3 uid="uid://dtnqdiyxa6mp7"]

[ext_resource type="Script" uid="uid://cacuartfclmpp" path="res://scripts/main_menu.gd" id="1_t4swf"]
[ext_resource type="Script" uid="uid://2tkeul3j5uhh" path="res://scripts/title.gd" id="2_1g8jr"]
[ext_resource type="StyleBox" uid="uid://ckn5h3ms188pw" path="res://data/styles/style_box.tres" id="2_fe2o3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1g8jr"]
bg_color = Color(0.53322875, 0.59957993, 0.9322929, 1)

[sub_resource type="Theme" id="Theme_fe2o3"]
Button/styles/hover = null
Button/styles/normal = ExtResource("2_fe2o3")
Button/styles/pressed = SubResource("StyleBoxFlat_1g8jr")

[node name="StartMenu" type="Control" unique_id=1640743575 node_paths=PackedStringArray("start")]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_t4swf")
start = NodePath("CenterContainer/MainButtons/Start")

[node name="Version" type="Label" parent="." unique_id=1875510227]
layout_mode = 0
offset_left = -257.0
offset_top = 81.0
offset_right = -71.0
offset_bottom = 125.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 11
text = "ALPHA V1.0.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title" type="RichTextLabel" parent="." unique_id=702098371]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.0
offset_top = -52.0
offset_right = 156.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_separation = -9
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[shake shake rate=10.0 level=3.0]THE WORLD RUNS ON [color=darkgreen]SLUDGE[/color][/shake]"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_1g8jr")

[node name="Subtitle" type="Label" parent="Title" unique_id=1080135498]
layout_mode = 0
offset_left = 11.0
offset_top = 56.0
offset_right = 197.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0.49, 0.49, 0.49, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 9
text = "by Agn√®s Lowing"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=1636585391]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -165.0
offset_top = -48.0
offset_right = -65.0
offset_bottom = 59.0
grow_horizontal = 0
grow_vertical = 2

[node name="MainButtons" type="VBoxContainer" parent="CenterContainer" unique_id=1555534659]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/separation = 16

[node name="Start" type="Button" parent="CenterContainer/MainButtons" unique_id=1249811471]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
mouse_default_cursor_shape = 2
theme = SubResource("Theme_fe2o3")
theme_override_constants/outline_size = 2
text = "Start"

[node name="Options" type="Button" parent="CenterContainer/MainButtons" unique_id=1586974164]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme = SubResource("Theme_fe2o3")
theme_override_constants/outline_size = 2
text = "Options"

[node name="Quit" type="Button" parent="CenterContainer/MainButtons" unique_id=1880917979]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_neighbor_bottom = NodePath("../Start")
mouse_default_cursor_shape = 2
theme = SubResource("Theme_fe2o3")
theme_override_constants/outline_size = 2
text = "Quit"

[connection signal="pressed" from="CenterContainer/MainButtons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/Quit" to="." method="_on_quit_pressed"]
